🦄 refactor: tiny refactor
