# docs/swagger.json
@@ -1447,9 +1447,8 @@
                 "summary": "获取标签信息",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "标签slug",
-                        "name": "tagSlug",
+                        "type": "integer",
+                        "name": "tagID",
                         "in": "path",
                         "required": true
                     }
@@ -1581,9 +1580,8 @@
                 "summary": "更新标签",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "标签slug",
-                        "name": "tagSlug",
+                        "type": "integer",
+                        "name": "tagID",
                         "in": "path",
                         "required": true
                     },
@@ -2576,7 +2574,12 @@
             }
         },
         "protocol.CreateTagResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "tag": {
+                    "$ref": "#/definitions/protocol.Tag"
+                }
+            }
         },
         "protocol.CurUser": {
             "type": "object",
